[package]
name = "btc_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoind = { version = "0.36.1", features = ["0_21_2"] }
rand = { version = "0.9.0", features = ["default"]}
crossbeam-channel = { version = "0.5.14", features = ["default"]}
uuid = { version = "1.13.1", features = ["v4"]}
dashmap = "6.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log"]}